--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,11 @@ p {
   border: 5px solid #333;
 }
 
-.running_container {
+.hobby_container {
   margin-left: 30px;
 }
 
-.running_container img {
+.hobby_container img {
   width: 275px;
   height: auto;
   border-radius: 15px;
